# vre

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
demo/: agent.py  callbacks.py  main.py  repl.py  tools.py
scripts/: README.md  clear_graph.py  seed_all.py  seed_gaps.py
src/vre/: __init__.py  guard.py
src/vre/builtins/: shell.py
src/vre/core/: graph.py  models.py
src/vre/core/grounding/: __init__.py  engine.py  models.py  resolver.py
src/vre/core/policy/: __init__.py  callback.py  gate.py  models.py  wizard.py
src/vre/integrations/: __init__.py  claude_code.py
tests/vre/: test_claude_code.py  test_engine.py  test_guard.py  test_policies.py  test_resolver.py  test_shell.py  test_types.py  test_vre.py
