[project]
name = "vre"
version = "0.1.0"
description = "Volute Reasoning Engine — decorator-based epistemic enforcement"
authors = [
    {name = "Andrew Greene",email = "anormang@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic>=2.0",
    "neo4j>=5.0,<7.0",
    "spacy>=3.8",
]

[project.optional-dependencies]
langchain = ["langchain-core>=1.2.16"]
demo = [
    "rich>=14.3.2",
    "langchain-core>=1.2.16",
    "langchain-ollama>=1.0.1",
]

[tool.poetry]
packages = [{include = "vre", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest>=9.0.2,<10.0.0"]
